# 42Advanced

MLBootcamp/IMPS/BootPy/MOD0/ex00/: NOTES.md  answer.txt  requirements.txt
MLBootcamp/IMPS/BootPy/MOD0/ex01/: NOTES.md  exec.py
MLBootcamp/IMPS/BootPy/MOD0/ex02/: NOTES.md  whois.py
MLBootcamp/IMPS/BootPy/MOD0/ex03/: NOTES.md  count.py
MLBootcamp/IMPS/BootPy/MOD0/ex04/: NOTES.md  operations.py
MLBootcamp/IMPS/BootPy/MOD0/ex05/: NOTES.md  kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
MLBootcamp/IMPS/BootPy/MOD0/ex06/: NOTES.md  recipe.py
MLBootcamp/IMPS/BootPy/MOD0/ex07/: NOTES.md  filterwords.py
MLBootcamp/IMPS/BootPy/MOD0/ex08/: NOTES.md  sos.py
MLBootcamp/IMPS/BootPy/MOD2/: README.md
MLBootcamp/IMPS/BootPy/MOD2/ex04/: LICENSE.md  NOTES.md  README.md  build.sh  setup.cfg  setup.py
MLBootcamp/IMPS/BootPy/MOD2/ex04/my_minipack/: __init__.py  logger.py  progress.py
MLBootcamp/IMPS/BootPy/MOD2/ex04/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
MLBootcamp/IMPS/BootPy/MOD3/: NOTES.md  test_mod3.py
MLBootcamp/IMPS/BootPy/MOD4/: NOTES.md  test_mod4.py
PythonPiscine/: LEARNING_GUIDE.md
PythonPiscine/PY_0/: main.py
PythonPiscine/PY_0/ex00/: Hello.py
PythonPiscine/PY_0/ex01/: format_ft_time.py
PythonPiscine/PY_0/ex02/: find_ft_type.py  tester.py  tester_diff.py
PythonPiscine/PY_0/ex03/: NULL_not_found.py  tester.py
PythonPiscine/PY_0/ex04/: whatis.py
PythonPiscine/PY_0/ex05/: building.py
PythonPiscine/PY_0/ex06/: filterstring.py  ft_filter.py
PythonPiscine/PY_0/ex07/: sos.py
PythonPiscine/PY_0/ex08/: Loading.py  tester.py
(+69 files in other folders)
