[metadata]
name = my_minipack
version = 1.0.0
# TODO: make this metadata yours (the subject says do NOT copy theirs)
author = your_login
author_email = your_login@student.42.fr
description = Howto create a package in python.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Education
    Topic :: Software Development
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7
