[metadata]
name = my_minipack
version = 1.0.0
author = vagarcia
author_email = entinosusini@gmail.com
description = How to create a package in python.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Topic :: Education
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7
